--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@rainbow-me/rainbowkit": "^1.3.3",
     "@tanstack/react-query": "^5.17.19",
     "@thirdweb-dev/chain-icons": "^1.0.5",
+    "@urql/exchange-graphcache": "^4.0.0",
     "@urql/next": "^1.1.0",
     "@wagmi/core": "~1",
     "addreth": "1.2.0",
@@ -26,6 +27,7 @@
     "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
     "graphql": "^16.8.1",
+    "lodash-es": "^4.17.21",
     "lokijs": "^1.5.12",
     "next-themes": "^0.2.1",
     "pino-pretty": "^10.2.3",
@@ -43,6 +45,7 @@
     "@babel/eslint-parser": "^7.23.3",
     "@babel/preset-env": "^7.23.5",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
