--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "query-passport-account": "curl -X GET http://localhost:3000/api/passport/0xdf8f53B9f83e611e1154402992c6F6CB7Daf246c",
     "query-all-scorer": "curl -X GET http://localhost:3000/api/passport/scores",
-    "get-sign-message": "curl -X GET http://localhost:3000/api/passport/signMessage"
+    "get-sign-message": "curl -X GET http://localhost:3000/api/passport/signMessage",
+    "add-user-score": "curl -X POST http://localhost:3000/api/passport-oracle/writeScore -H 'Content-Type: application/json' -d '{\"address\":\"0x9965507D1a55bcC2695C58ba16FB37d819B0A4dc\",\"score\":100}'"
   },
   "dependencies": {
     "@allo-team/allo-v2-sdk": "^1.0.34",
