--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env
+*.env
 .env.local
 .env.development.local
 .env.test.local
@@ -32,7 +32,6 @@ yarn-error.log*
 
 # turbo
 .turbo
-
 
 # foundry
 cache/
