--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,9 @@ jobs:
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+      SCORER_ID: ${{ secrets.SCORER_ID }}
+      GITCOIN_PASSPORT_API_KEY: ${{ secrets.GITCOIN_PASSPORT_API_KEY }}
+      LIST_MANAGER_PRIVATE_KEY: ${{ secrets.LIST_MANAGER_PRIVATE_KEY }}
 
     steps:
       - name: Check out code
