--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.17.19",
     "@thirdweb-dev/chain-icons": "^1.0.5",
     "@urql/next": "^1.1.0",
+    "@vercel/node": "^3.1.7",
     "@wagmi/core": "~1",
     "addreth": "1.2.0",
     "classnames": "^2.5.1",
@@ -34,21 +35,26 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-toastify": "^10.0.4",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "ui": "workspace:*",
     "urql": "^4.0.6",
     "use-debounce": "^10.0.1",
     "viem": "~1",
-    "wagmi": "~1"
+    "wagmi": "~1",
+    "ws": "^8.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/eslint-parser": "^7.23.3",
     "@babel/preset-env": "^7.23.5",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/express": "^4.17.21",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "6.18.2-alpha.2",
     "@typescript-eslint/typescript-estree": "^6.17.0",
