:sparkles: RegistryFactory upgradable UUPS + tests

--- a/pkg/contracts/example.env
+++ b/pkg/contracts/example.env
@@ -1,3 +1,5 @@
+FOUNDRY_OUT=pkg/contracts/out
+
 RPC_URL=
 ALLO_PROXY=0x1133eA7Af70876e64665ecD07C0A0476d09465a1
 ALLO_IMPL=0xB087535DB0df98fC4327136e897A5985E5Cfbd66
