--- a/apps/web/.vscode/launch.json
+++ b/apps/web/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": "Next.js: debug server-side",
       "type": "node-terminal",
       "request": "launch",
-      "command": "pnpm dev"
+      "command": "pnpm dev",
     },
     {
       "name": "Next.js: debug client-side",
