--- a/turbo.json
+++ b/turbo.json
@@ -28,7 +28,8 @@
       "env": [
         "NEXT_PUBLIC_SUBGRAPH_URL",
         "NEXT_PUBLIC_SUBGRAPH_URL_ETH_SEP",
-        "PINATA_JWT"
+        "PINATA_JWT",
+        "NODE_ENV"
       ]
     },
     "test": {
