--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,9 +27,8 @@ jobs:
           version: nightly
 
       - uses: pnpm/action-setup@v2.0.1
-        # The packageManager field is considered: https://github.com/pnpm/action-setup?tab=readme-ov-file#version
-        # with:
-        #   version: 8.14.0
+        with:
+          version: 8.14.0
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
