--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,8 @@
   "solidity.packageDefaultDependenciesContractsDirectory": "pkg/contracts/src",
   "solidity.packageDefaultDependenciesDirectory": "lib",
   "[solidity]": {
-    "editor.defaultFormatter": "NomicFoundation.hardhat-solidity",
+    "editor.defaultFormatter": "JuanBlanco.solidity",
     "editor.formatOnSave": true
   },
-  "solidity.formatter": "forge",
+  "solidity.formatter": "forge"
 }
