--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
     "prettier": "latest",
+    "prettier-plugin-solidity": "^1.3.1",
     "turbo": "^1.7.4"
   },
   "engines": {
