--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,8 +19,8 @@
     "@tanstack/react-query": "^5.17.19",
     "@thirdweb-dev/chain-icons": "^1.0.5",
     "@urql/next": "^1.1.0",
-    "@vercel/node": "^3.1.7",
     "@wagmi/core": "~1",
+    "ably": "^2.1.0",
     "addreth": "1.2.0",
     "classnames": "^2.5.1",
     "dnum": "^2.11.0",
