--- a/apps/web/env.example
+++ b/apps/web/env.example
@@ -12,5 +12,6 @@ NEXT_PUBLIC_RPC_URL_ETH_TESTNET=https://arb-sepolia.g.alchemy.com/v2/YOUR_KEY_HE
 RPC_URL_LOCAL=http://127.0.0.1:8545
 
 PINATA_JWT=
+NEXT_ABLY_API_KEY=
 
 
