--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,8 @@
     "query-passport-account": "curl -X GET http://localhost:3000/api/passport/0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266",
     "query-all-scorer": "curl -X GET http://localhost:3000/api/passport/scores",
     "get-sign-message": "curl -X GET http://localhost:3000/api/passport/signMessage",
-    "add-user-score": "curl -X POST http://localhost:3000/api/passport-oracle/writeScore -H 'Content-Type: application/json' -d '{\"address\":\"0x9965507D1a55bcC2695C58ba16FB37d819B0A4dc\",\"score\":100}'"
+    "add-user-score": "curl -X POST http://localhost:3000/api/passport-oracle/writeScore -H 'Content-Type: application/json' -d '{\"address\":\"0x9965507D1a55bcC2695C58ba16FB37d819B0A4dc\",\"score\":100}'",
+    "add-strategy": "curl -X POST http://localhost:3000/api/passport-oracle/addStrategy -H 'Content-Type: application/json' -d '{\"strategy\":\"0xfbeb532e7188cf8765e0e0141bedc076593172e2\",\"threshold\":\"200000\"}'"
   },
   "dependencies": {
     "@allo-team/allo-v2-sdk": "^1.0.34",
