--- a/apps/web/env.example
+++ b/apps/web/env.example
@@ -14,4 +14,6 @@ RPC_URL_LOCAL=http://127.0.0.1:8545
 PINATA_JWT=
 NEXT_ABLY_API_KEY=
 
+NEXT_PUBLIC_SENTRY_REPLAYS_ON_ERROR_SAMPLE_RATE=1
+NEXT_PUBLIC_SENTRY_REPLAYS_SESSION_SAMPLE_RATE=1
 
