--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.1.1",
     "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^1.3.3",
+    "@sentry/nextjs": "^8",
     "@tanstack/react-query": "^5.17.19",
     "@thirdweb-dev/chain-icons": "^1.0.5",
     "@urql/next": "^1.1.0",
