--- a/apps/web/.vscode/settings.json
+++ b/apps/web/.vscode/settings.json
@@ -1,9 +1,4 @@
 {
-  "solidity.packageDefaultDependenciesContractsDirectory": "pkg/contracts/src",
-  "solidity.packageDefaultDependenciesDirectory": "lib",
-  "[solidity]": {
-    "editor.defaultFormatter": "NomicFoundation.hardhat-solidity",
-    "editor.formatOnSave": true
-  },
-  "solidity.formatter": "forge",
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "dbaeumer.vscode-eslint"
 }
