Add sentry DNS override

--- a/turbo.json
+++ b/turbo.json
@@ -32,6 +32,7 @@
         "NODE_ENV",
         "NEXT_ABLY_API_KEY",
         "NEXT_RUNTIME",
+        "NEXT_PUBLIC_SENTRY_DSN",
         "NEXT_PUBLIC_SENTRY_REPLAYS_ON_ERROR_SAMPLE_RATE",
         "NEXT_PUBLIC_SENTRY_REPLAYS_SESSION_SAMPLE_RATE"
       ]
