--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -56,6 +56,8 @@
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.20",
     "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-html": "^7.1.0",
