--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -37,7 +37,10 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "prettier.config.js",
-    ".eslintrc.js"
+    ".eslintrc.js",
+    "next.config.js",
+    "postcss.config.js",
+    "tailwind.config.js"
   ],
   "exclude": [
     "node_modules"
