--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,8 +19,8 @@
     "@tanstack/react-query": "^5.17.19",
     "@thirdweb-dev/chain-icons": "^1.0.5",
     "@urql/next": "^1.1.0",
-    "@wagmi/core": "~1",
     "@wagmi/cli": "1.5.2",
+    "@wagmi/core": "~1",
     "ably": "^2.1.0",
     "addreth": "1.2.0",
     "classnames": "^2.5.1",
@@ -72,6 +72,7 @@
     "tailwindcss": "^3.3.6",
     "tsconfig": "workspace:*",
     "typescript": "~5.2.2",
-    "typescript-eslint": "^7.16.0"
+    "typescript-eslint": "^7.16.0",
+    "uglify-es": "^3.3.9"
   }
 }
