--- a/turbo.json
+++ b/turbo.json
@@ -36,7 +36,8 @@
         "NEXT_ABLY_API_KEY",
         "NEXT_PUBLIC_ENV_GARDENS",
         "NEXT_PUBLIC_SUBGRAPH_URL_ARB_SEP",
-        "NEXT_PUBLIC_SUBGRAPH_URL_OP_SEP"
+        "NEXT_PUBLIC_SUBGRAPH_URL_OP_SEP",
+        "NEXT_PUBLIC_IPFS_GATEWAY"
       ]
     },
     "test": {
