--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,7 @@
     "abitype": "^1.0.5",
     "ably": "^2.1.0",
     "addreth": "1.2.0",
+    "blo": "^1.2.0",
     "classnames": "^2.5.1",
     "daisyui": "^4.4.20",
     "dnum": "^2.11.0",
@@ -46,6 +47,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-toastify": "^10.0.4",
+    "sass": "^1.77.8",
     "ui": "workspace:*",
     "urql": "^4.0.6",
     "viem": "~1",
