--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
     "blo": "^1.2.0",
     "classnames": "^2.5.1",
     "daisyui": "^4.4.20",
+    "date-fns": "^3.6.0",
     "dnum": "^2.11.0",
     "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
