--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -52,6 +52,7 @@
     "sass": "^1.77.8",
     "ui": "workspace:*",
     "urql": "^4.0.6",
+    "usehooks-ts": "^3.1.0",
     "viem": "~1",
     "wagmi": "~1"
   },
