--- a/turbo.json
+++ b/turbo.json
@@ -48,7 +48,10 @@
         "NEXT_PUBLIC_SENTRY_DSN",
         "NEXT_PUBLIC_SENTRY_REPLAYS_ON_ERROR_SAMPLE_RATE",
         "NEXT_PUBLIC_SENTRY_REPLAYS_SESSION_SAMPLE_RATE",
-        "NEXT_PUBLIC_IPFS_GATEWAY"
+        "NEXT_PUBLIC_IPFS_GATEWAY",
+        "NEXT_PUBLIC_GLOBAL_TRIBUNAL_ADDRESS",
+        "NEXT_PUBLIC_DEFAULT_PROPOSAL_COLLATERAL",
+        "NEXT_PUBLIC_DEFAULT_DISPUTE_COLLATERAL"
       ]
     },
     "test": {
