:wip: deploy upgradeable

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -59,7 +59,8 @@ deploy:
 	--rpc-url $(RPC_URL_LOCALHOST) \
 	--sender 0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266 \
 	--unlocked \
-	--broadcast -vv
+	--broadcast -vv \
+	--force
 	
 
 deploy-pool-testnet: 
