Fix anonymous revert (problem was never passed arbitration config in CVStrategyHelper::createPool )

--- a/foundry.toml
+++ b/foundry.toml
@@ -12,6 +12,8 @@ extra_output = ["storageLayout"]
 
 optimizer = true
 optimizer-runs = 1_000
+viaIR = true
+
 # prompt_timeout = 120
 fs_permissions = [{ access = "read", path = "./"}]
 # fs_permissions = []
