--- a/pkg/contracts/package.json
+++ b/pkg/contracts/package.json
@@ -7,6 +7,7 @@
     "fork": "make fork",
     "_build": "forge build --sizes",
     "lint": "forge fmt",
-    "test": "forge test -vvv"
+    "test": "forge test -vvv",
+    "format": "forge fmt"
   }
 }
