--- a/pkg/subgraph/package.json
+++ b/pkg/subgraph/package.json
@@ -12,7 +12,7 @@
     "build:ethsep": "pnpm manifest:ethsep && graph codegen && graph build",
     "create-local": "graph create --node http://localhost:8020/ kamikazebr/gv2",
     "remove-local": "graph remove --node http://localhost:8020/ kamikazebr/gv2",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 kamikazebr/gv2 -l v0.0.3",
+    "deploy:local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 kamikazebr/gv2 -l v0.0.3",
     "deploy:arbsep": "pnpm manifest:arbsep && graph deploy --studio gv2-arbsepolia",
     "build-deploy:arbsep": "pnpm build:arbsep && pnpm deploy:arbsep:last",
     "build-deploy:ethsep": "pnpm build:ethsep && pnpm deploy:ethsep:last",
@@ -29,6 +29,7 @@
     "@graphprotocol/graph-ts": "^0.34.0",
     "@types/node": "*",
     "node-fetch": "*",
+    "process": "^0.11.10",
     "typescript": ">=2.7"
   },
   "devDependencies": {
