--- a/foundry.toml
+++ b/foundry.toml
@@ -9,6 +9,7 @@ ffi = true
 ast = true
 build_info = true
 extra_output = ["storageLayout"]
+block_gas_limit = 30000000 
 
 optimizer = true
 optimizer-runs = 1
