--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -59,6 +59,7 @@ deploy:
 	--rpc-url $(RPC_URL_LOCALHOST) \
 	--sender 0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266 \
 	--unlocked \
+	--via-ir src \
 	--broadcast -vvvv \
 	--force
 	
