:zap: safe break changes func

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -59,7 +59,8 @@ deploy:
 	--sender 0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266 \
 	--unlocked \
 	--broadcast -vvvv \
-	--force
+	--force \
+	--via-ir 
 	
 
 deploy-pool-testnet: 
