:zap: inrerface Safe + deploy bytecode

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -59,8 +59,7 @@ deploy:
 	--sender 0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266 \
 	--unlocked \
 	--broadcast -vvvv \
-	--force \
-	--via-ir 
+	--force 
 	
 
 deploy-pool-testnet: 
