--- a/pkg/subgraph/src/templates/registryFactory.yaml
+++ b/pkg/subgraph/src/templates/registryFactory.yaml
@@ -19,7 +19,7 @@
       abis:
         - name: {{name}}
           file: ../contracts/out/{{name}}.sol/{{name}}.json
-        - name: RegistryCommunity
+        - name: RegistryCommunityV0_0
           file: ../contracts/out/RegistryCommunityV0_0.sol/RegistryCommunityV0_0.json
       eventHandlers:
         - event: CommunityCreated(address)
