--- a/pkg/subgraph/src/templates/subgraph.yaml
+++ b/pkg/subgraph/src/templates/subgraph.yaml
@@ -92,7 +92,7 @@ templates:
         - name: Allo
           file: ../contracts/out/Allo.sol/Allo.json
       eventHandlers:
-        - event: InitializedCV(uint256,(address,uint256,uint256,uint256,uint256,uint8,uint8,(uint256),(address,address,uint256,uint256,uint256,uint256,address),address))
+        - event: InitializedCV(uint256,((uint256,uint256,uint256,uint256),uint8,uint8,(uint256),(address,address,uint256,uint256,uint256,uint256),address,address))
           handler: handleInitialized
         - event: ProposalCreated(uint256,uint256)
           handler: handleProposalCreated
@@ -108,16 +108,10 @@ templates:
           handler: handlePowerDecreased
         - event: PointsDeactivated(address)
           handler: handlePointsDeactivated
-        - event: DecayUpdated(uint256)
-          handler: handleDecayUpdated
-        - event: MaxRatioUpdated(uint256)
-          handler: handleMaxRatioUpdated
-        - event: WeightUpdated(uint256)
-          handler: handleWeightUpdated
+        - event: PoolParamsUpdated((uint256,uint256,uint256,uint256),(address,address,uint256,uint256,uint256,uint256))
+          handler: handlePoolParamsUpdated
         - event: ProposalDisputed(address,uint256,uint256,address,string,uint256)
           handler: handleProposalDisputed
-        - event: ArbitrationConfigUpdated(address,(address,address,uint256,uint256,uint256,uint256,address))
-          handler: handleArbitrationConfigUpdated
         - event: Ruling(indexed address,indexed uint256,uint256)
           handler: handleDisputeRuled
  
