--- a/pkg/subgraph/src/templates/_cvStrategy.yaml
+++ b/pkg/subgraph/src/templates/_cvStrategy.yaml
@@ -10,7 +10,7 @@
       entities:
         - CVStrategy
       abis:
-        - name: CVStrategy
+        - name: CVStrategyV0_0
           file: ../contracts/out/CVStrategyV0_0.sol/CVStrategyV0_0.json
       eventHandlers:
         - event: InitializedCV(uint256,(address,uint256,uint256,uint256,uint256,uint8,uint8,(uint256),(address,address,uint256,uint256,uint256,address),address))
