:bug: fix multichain

--- a/pkg/subgraph/package.json
+++ b/pkg/subgraph/package.json
@@ -16,10 +16,10 @@
     "deploy:arbsep": "pnpm manifest:arbsep && graph deploy --studio gv2-arbsepolia",
     "build-deploy:arbsep": "pnpm build:arbsep && pnpm deploy:arbsep:last",
     "build-deploy:ethsep": "pnpm build:ethsep && pnpm deploy:ethsep:last",
-    "local": "pnpm create-local && pnpm build && pnpm deploy-local",
+    "local": "pnpm create-local && pnpm build && pnpm deploy:local",
     "last-addr": "ts-node --esm -P ../../apps/web/tsconfig.json ./src/scripts/last-addr.ts",
     "build-client": "graphclient build --fileType js",
-    "build-all": "pnpm create-local && pnpm build && pnpm deploy-local",
+    "build-all": "pnpm create-local && pnpm build && pnpm deploy:local",
     "deploy:arbsep:last": "dotenvx run -- ts-node --esm -P ../../apps/web/tsconfig.json ./src/scripts/last-version.ts gv2-arbsepolia",
     "deploy:ethsep:last": "dotenvx run -- ts-node --esm -P ../../apps/web/tsconfig.json ./src/scripts/last-version.ts gv2-ethsepolia",
     "codegen": "graph codegen"
