--- a/pkg/subgraph/src/templates/subgraph.yaml
+++ b/pkg/subgraph/src/templates/subgraph.yaml
@@ -117,15 +117,15 @@ templates:
  
       file: ./src/mappings/cv-strategy.ts
   
-  # - name: ProposalDisputeMetadata
-  #   kind: file/ipfs
-  #   mapping:
-  #     apiVersion: 0.0.7
-  #     language: wasm/assemblyscript
-  #     file: ./src/mappings/proposal-metadata.ts
-  #     handler: handleProposalDisputeMetadata
-  #     entities:
-  #       - ProposalDisputeMetadata
-  #     abis:
-  #       - name: CVStrategyV0_0
-  #         file: ../contracts/out/CVStrategyV0_0.sol/CVStrategyV0_0.json
+  - name: ProposalDisputeMetadata
+    kind: file/ipfs
+    mapping:
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      file: ./src/mappings/proposal-metadata.ts
+      handler: handleProposalDisputeMetadata
+      entities:
+        - ProposalDisputeMetadata
+      abis:
+        - name: CVStrategyV0_0
+          file: ../contracts/out/CVStrategyV0_0.sol/CVStrategyV0_0.json
