--- a/turbo.json
+++ b/turbo.json
@@ -51,7 +51,8 @@
         "NEXT_PUBLIC_IPFS_GATEWAY",
         "NEXT_PUBLIC_GLOBAL_TRIBUNAL_ADDRESS",
         "NEXT_PUBLIC_DEFAULT_PROPOSAL_COLLATERAL",
-        "NEXT_PUBLIC_DEFAULT_DISPUTE_COLLATERAL"
+        "NEXT_PUBLIC_DEFAULT_DISPUTE_COLLATERAL",
+        "NEXT_PUBLIC_WALLET_CONNECT_ID"
       ]
     },
     "test": {
