--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -104,16 +104,32 @@ deploy-testnet-multi-sep:
 	--etherscan-api-key $(ETHERSCAN_API_KEY_ETH_SEP) \
 	--broadcast \
 	--legacy \
+	--force \
 	-vvv
 
 deploy-testnet-multi-sep-v0: 
-	-forge script script/DeployCVMultiChain.s.sol:DeployCVMultiChain \
+	-forge script script/DeployCVMultiChainV0_0.s.sol:DeployCVMultiChain \
 	--rpc-url $(RPC_URL_SEP_TESTNET) \
 	--account pk1 \
 	--sig "run(string)" 'sepolia' \
 	--ffi \
 	--etherscan-api-key $(ETHERSCAN_API_KEY_ETH_SEP) \
+	--broadcast \
 	--legacy \
+	--verify \
+	--via-ir \
+	-vvv
+	
+deploy-verify-multi-sep-v0: 
+	-forge script script/DeployCVMultiChainV0_0.s.sol:DeployCVMultiChain \
+	--rpc-url $(RPC_URL_SEP_TESTNET) \
+	--sig "run(string)" 'sepolia' \
+	--account pk1 \
+	--ffi \
+	--verify \
+	--legacy \
+	--via-ir \
+	--etherscan-api-key $(ETHERSCAN_API_KEY_ETH_SEP) \
 	-vvv
 deploy-verify-multi-sep: 
 	-forge script script/DeployCVMultiChain.s.sol:DeployCVMultiChain \
@@ -141,6 +157,20 @@ deploy-testnet-multi-arb:
 	--ffi \
 	--etherscan-api-key $(ETHERSCAN_API_KEY) \
 	--broadcast \
+	-vvv
+
+deploy-testnet-multi-arb-v0: 
+	-forge script script/DeployCVMultiChainV0_0.s.sol:DeployCVMultiChain \
+	--rpc-url $(RPC_URL_ARB_TESTNET) \
+	--sig "run(string)" 'arbsepolia' \
+	--account pk1 \
+	--ffi \
+	--etherscan-api-key $(ARBISCAN_API_KEY) \
+	--verifier-url https://api-goerli.arbiscan.io/api \
+	--broadcast \
+	--verify \
+	--legacy \
+	--via-ir \
 	-vvv
 
 deploy-verify: 
